# mscMIVIDA

./: .env  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  Dockerfile  Makefile  Makefile.include  README.md  cookiecutter-config-file.yml  environment.yml  mkdocs.yml  pyproject.toml  setup.py
docs/: CONTRIBUTING.md  DEVELOPER.md  generate_api_reference.py  index.md
notebooks/: README.md
requirements/: requirements-dempy.txt  requirements-dev.txt  requirements-docs.txt  requirements-notebook.txt  requirements-prod.txt  requirements.txt
scripts/: compare_subset_full_dq.sh
src/mscmivida/: __init__.py  __main__.py  api.py  config.py  logger.py  main.py  version.py
src/mscmivida/data/: loader_mitbih.py
src/mscmivida/evaluation/: data_quality_deepcore.py  data_quality_plot.py  selection_experiment.py
src/mscmivida/models/: mnist_experiment.py
src/mscmivida/utils/: util.py
src/mscmivida/visualization/: visualizer_mitbih.py
tests/: __init__.py  test_import_utils.py
